--- a/img/index.html
+++ b/img/index.html
@@ -1,25 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML CSS Discord</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HTML CSS Discord</title>
 
-    <!--CSS-->
-    <link rel="stylesheet" href="css/style.css">
+        <!--CSS-->
+        <link rel="stylesheet" href="css/style.css">
 
-    <!--font awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    <!--HEADER-->
-
-    <!--/HEADER-->
-    <!--MAIN-->
-
-    <!--MAIN-->
-    <!--FOOTER-->
+        <!--font awesome-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <!--FOOTER-->
-</body>
+        <!--Google Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <!--HEADER-->
+            <header>
+                <div class="container-header">
+                    <div class="discord">
+                        <img src="./logo.svg" alt="logo discord">
+                    </div>
+                    <div class="scarica">
+                        Scarica
+                    </div>
+
+                    <div class="perche-discord">
+                        Perchè Discord
+                    </div>
+
+                    <div class="nitro">
+                        Nitro
+                    </div>
+
+                    <div class="sicurezza">
+                        Sicurezza
+                    </div>
+
+                    <div class="assistenza">
+                        Assistenza
+                    </div>
+                    <button class="accedi">Accedi</button>
+                </div>
+            </header>
+        <!--/HEADER-->
+        <!--MAIN-->
+
+        <!--MAIN-->
+        <!--FOOTER-->
+
+        <!--FOOTER-->
+    </body>
 </html>
