fatto quasi tutto il main

--- a/img/index.html
+++ b/img/index.html
@@ -23,34 +23,128 @@
                     <div class="discord">
                         <img src="./logo.svg" alt="logo discord">
                     </div>
-                    <div class="scarica">
-                        Scarica
-                    </div>
 
-                    <div class="perche-discord">
-                        Perchè Discord
-                    </div>
-
-                    <div class="nitro">
-                        Nitro
-                    </div>
-
-                    <div class="sicurezza">
-                        Sicurezza
-                    </div>
-
-                    <div class="assistenza">
-                        Assistenza
-                    </div>
+                    <nav class="nav-button">
+                        Scarica Perchè Discord Nitro Sicurezza Assistenza
+                    </nav>
+                    
                     <button class="accedi">Accedi</button>
                 </div>
             </header>
         <!--/HEADER-->
         <!--MAIN-->
+            <div class="container-blu">
+                <div class="first-main">
+                    <h2>Il tuo posto per parlare</h2>
+                    <p>Che tu faccia parte di un club scolastico,
+                         gruppo di gamer, comunità artistica mondiale,
+                         </p>
+                    <p>o semplicemente di un piccolo gruppo di amici che
+                        vuole passare il tempo assieme,
+                    </p>
+                    <p>Discord rende più facile chiaccherare ogni
+                        giorno e ritrovarsi più spesso.
+                    </p>
+                    <button class="scarica-mac">
+                        &darr; Scarica per Mac
+                    </button>
+                    <button class="apri-browser">
+                        Apri Discord nel tuo browser
+                    </button>
+                </div>
+            </div>
 
+            <div class="container-white">
+                <div class="container-img1">
+                    <img src="./item1.svg" alt="item1">
+                </div>
+                <div class="container-text1">
+                    <h2 class="space-h2-1">
+                        Un luogo a invito <br>
+                        con tutto lo <br>
+                        spazio <br>
+                        necessario per <br> 
+                        parlare
+                    </h2>
+                    <p>
+                        I server Discord sono organizzati in canali
+                    </p>
+                    <p>
+                        tematici in cui puoi collaborare, condividere o
+                    </p>
+                    <p>
+                        semplicemente parlare della tua giornata
+                    </p>
+                    <p>
+                        senza intasare una chat di gruppo.
+                    </p>
+                </div>
+            </div>
+                <div class="container-gray">
+                    <div class="container-text2">
+                        <h2 class="space-h2-2">
+                            Dove trovarsi è facile
+                        </h2>
+                        <p>
+                            Mettiti comodo in un canale vocale quando hai tempo
+                        </p>
+                        <p>
+                            hai tempo. Gli amici nel tuo server possono
+                        </p>
+                        <p>
+                            vedere che sei lì e unirsi istantaneamente
+                        </p>
+                        <p>
+                            senza dover chiamare.
+                        </p>
+                    </div>
+                    <div class="container-img2">
+                        <img src="./item2.svg" alt="item2">
+                    </div>
+                </div>
+                <div class="container-white">
+                    <div class="container-img3">
+                        <img src="./item3.svg" alt="item3">
+                    </div>
+                    <div class="container-text3">
+                        <h2 class="space-h2-3">
+                            Da pochi a un <br> 
+                            fandom
+                        </h2>
+                        <p>
+                            Dai inizio a una community di qualsiasi
+                        </p>
+                        <p>
+                            dimensione con strumenti di moderazione
+                        </p>
+                        <p>
+                            e accesso ai membri personalizzabile.
+                        </p>
+                        <p>
+                            Concedi ai membri poteri speciali, crea
+                        </p>
+                        <p>
+                            canali privati, e molto altro.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-gray">
+                    <div class="container-text4">
+
+                    </div>
+                    <div class="container-img4">
+                        <img src="./item4-big.svg" alt="item4">
+                    </div>
+                    <div class="container-text5">
+
+                    </div>
+                </div>
+            </div>
         <!--MAIN-->
         <!--FOOTER-->
-
+        <div class="container-dark">
+                    
+        </div>
         <!--FOOTER-->
     </body>
 </html>
