--- a/img/index.html
+++ b/img/index.html
@@ -45,7 +45,7 @@
                     <p>Discord rende più facile chiaccherare ogni
                         giorno e ritrovarsi più spesso.
                     </p>
-                    <button class="scarica-mac">
+                    <button class="scarica-mac-white">
                         &darr; Scarica per Mac
                     </button>
                     <button class="apri-browser">
@@ -128,15 +128,32 @@
                         </p>
                     </div>
                 </div>
-                <div class="container-gray">
+                <div class="container-gray2">
                     <div class="container-text4">
-
+                        <h2 class="space-h2-4">
+                            Tecnologia affidabile per tenersi in contatto
+                        </h2>
+                        <p>
+                            Video e audio a bassa latenza ti faranno 
+                            sentire come se foste tutti nella stessa stanza. 
+                            Fai ciao in video, guarda
+                        </p>
+                        <p>
+                            gli amici giocare in streaming, 
+                            o riunitevi in una sessione di disegno con la 
+                            condivisione schermo.
+                        </p>
                     </div>
                     <div class="container-img4">
                         <img src="./item4-big.svg" alt="item4">
                     </div>
                     <div class="container-text5">
-
+                        <h2 class="space-h2-5">
+                            Pronto a iniziare l'avventura?
+                        </h2>
+                        <button class="scarica-mac-blue">
+                            &darr; Scarica per Mac
+                        </button>
                     </div>
                 </div>
             </div>
