Finito anche footer ma con delle correzioni da apportare

--- a/img/index.html
+++ b/img/index.html
@@ -20,7 +20,7 @@
         <!--HEADER-->
             <header>
                 <div class="container-header">
-                    <div class="discord">
+                    <div class="discord1">
                         <img src="./logo.svg" alt="logo discord">
                     </div>
 
@@ -33,135 +33,260 @@
             </header>
         <!--/HEADER-->
         <!--MAIN-->
-            <div class="container-blu">
-                <div class="first-main">
-                    <h2>Il tuo posto per parlare</h2>
-                    <p>Che tu faccia parte di un club scolastico,
-                         gruppo di gamer, comunità artistica mondiale,
-                         </p>
-                    <p>o semplicemente di un piccolo gruppo di amici che
-                        vuole passare il tempo assieme,
-                    </p>
-                    <p>Discord rende più facile chiaccherare ogni
-                        giorno e ritrovarsi più spesso.
-                    </p>
-                    <button class="scarica-mac-white">
-                        &darr; Scarica per Mac
-                    </button>
-                    <button class="apri-browser">
-                        Apri Discord nel tuo browser
-                    </button>
-                </div>
-            </div>
-
-            <div class="container-white">
-                <div class="container-img1">
-                    <img src="./item1.svg" alt="item1">
-                </div>
-                <div class="container-text1">
-                    <h2 class="space-h2-1">
-                        Un luogo a invito <br>
-                        con tutto lo <br>
-                        spazio <br>
-                        necessario per <br> 
-                        parlare
-                    </h2>
-                    <p>
-                        I server Discord sono organizzati in canali
-                    </p>
-                    <p>
-                        tematici in cui puoi collaborare, condividere o
-                    </p>
-                    <p>
-                        semplicemente parlare della tua giornata
-                    </p>
-                    <p>
-                        senza intasare una chat di gruppo.
-                    </p>
-                </div>
-            </div>
-                <div class="container-gray">
-                    <div class="container-text2">
-                        <h2 class="space-h2-2">
-                            Dove trovarsi è facile
-                        </h2>
-                        <p>
-                            Mettiti comodo in un canale vocale quando hai tempo
+            <main>
+                <div class="container-blu">
+                    <div class="first-main">
+                        <h2>Il tuo posto per parlare</h2>
+                        <p>Che tu faccia parte di un club scolastico,
+                            gruppo di gamer, comunità artistica mondiale,
+                            </p>
+                        <p>o semplicemente di un piccolo gruppo di amici che
+                            vuole passare il tempo assieme,
                         </p>
-                        <p>
-                            hai tempo. Gli amici nel tuo server possono
+                        <p>Discord rende più facile chiaccherare ogni
+                            giorno e ritrovarsi più spesso.
                         </p>
-                        <p>
-                            vedere che sei lì e unirsi istantaneamente
-                        </p>
-                        <p>
-                            senza dover chiamare.
-                        </p>
-                    </div>
-                    <div class="container-img2">
-                        <img src="./item2.svg" alt="item2">
-                    </div>
-                </div>
-                <div class="container-white">
-                    <div class="container-img3">
-                        <img src="./item3.svg" alt="item3">
-                    </div>
-                    <div class="container-text3">
-                        <h2 class="space-h2-3">
-                            Da pochi a un <br> 
-                            fandom
-                        </h2>
-                        <p>
-                            Dai inizio a una community di qualsiasi
-                        </p>
-                        <p>
-                            dimensione con strumenti di moderazione
-                        </p>
-                        <p>
-                            e accesso ai membri personalizzabile.
-                        </p>
-                        <p>
-                            Concedi ai membri poteri speciali, crea
-                        </p>
-                        <p>
-                            canali privati, e molto altro.
-                        </p>
-                    </div>
-                </div>
-                <div class="container-gray2">
-                    <div class="container-text4">
-                        <h2 class="space-h2-4">
-                            Tecnologia affidabile per tenersi in contatto
-                        </h2>
-                        <p>
-                            Video e audio a bassa latenza ti faranno 
-                            sentire come se foste tutti nella stessa stanza. 
-                            Fai ciao in video, guarda
-                        </p>
-                        <p>
-                            gli amici giocare in streaming, 
-                            o riunitevi in una sessione di disegno con la 
-                            condivisione schermo.
-                        </p>
-                    </div>
-                    <div class="container-img4">
-                        <img src="./item4-big.svg" alt="item4">
-                    </div>
-                    <div class="container-text5">
-                        <h2 class="space-h2-5">
-                            Pronto a iniziare l'avventura?
-                        </h2>
-                        <button class="scarica-mac-blue">
+                        <button class="scarica-mac-white">
                             &darr; Scarica per Mac
+                        </button>
+                        <button class="apri-browser">
+                            Apri Discord nel tuo browser
                         </button>
                     </div>
                 </div>
-            </div>
+
+                <div class="container-white">
+                    <div class="container-img1">
+                        <img src="./item1.svg" alt="item1">
+                    </div>
+                    <div class="container-text1">
+                        <h2 class="space-h2-1">
+                            Un luogo a invito <br>
+                            con tutto lo <br>
+                            spazio <br>
+                            necessario per <br> 
+                            parlare
+                        </h2>
+                        <p>
+                            I server Discord sono organizzati in canali
+                        </p>
+                        <p>
+                            tematici in cui puoi collaborare, condividere o
+                        </p>
+                        <p>
+                            semplicemente parlare della tua giornata
+                        </p>
+                        <p>
+                            senza intasare una chat di gruppo.
+                        </p>
+                    </div>
+                </div>
+                    <div class="container-gray">
+                        <div class="container-text2">
+                            <h2 class="space-h2-2">
+                                Dove trovarsi è facile
+                            </h2>
+                            <p>
+                                Mettiti comodo in un canale vocale quando hai tempo
+                            </p>
+                            <p>
+                                hai tempo. Gli amici nel tuo server possono
+                            </p>
+                            <p>
+                                vedere che sei lì e unirsi istantaneamente
+                            </p>
+                            <p>
+                                senza dover chiamare.
+                            </p>
+                        </div>
+                        <div class="container-img2">
+                            <img src="./item2.svg" alt="item2">
+                        </div>
+                    </div>
+                    <div class="container-white">
+                        <div class="container-img3">
+                            <img src="./item3.svg" alt="item3">
+                        </div>
+                        <div class="container-text3">
+                            <h2 class="space-h2-3">
+                                Da pochi a un <br> 
+                                fandom
+                            </h2>
+                            <p>
+                                Dai inizio a una community di qualsiasi
+                            </p>
+                            <p>
+                                dimensione con strumenti di moderazione
+                            </p>
+                            <p>
+                                e accesso ai membri personalizzabile.
+                            </p>
+                            <p>
+                                Concedi ai membri poteri speciali, crea
+                            </p>
+                            <p>
+                                canali privati, e molto altro.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-gray2">
+                        <div class="container-text4">
+                            <h2 class="space-h2-4">
+                                Tecnologia affidabile per tenersi in contatto
+                            </h2>
+                            <p>
+                                Video e audio a bassa latenza ti faranno 
+                                sentire come se foste tutti nella stessa stanza. 
+                                Fai ciao in video, guarda
+                            </p>
+                            <p>
+                                gli amici giocare in streaming, 
+                                o riunitevi in una sessione di disegno con la 
+                                condivisione schermo.
+                            </p>
+                        </div>
+                        <div class="container-img4">
+                            <img src="./item4-big.svg" alt="item4">
+                        </div>
+                        <div class="container-text5">
+                            <h2 class="space-h2-5">
+                                Pronto a iniziare l'avventura?
+                            </h2>
+                            <button class="scarica-mac-blue">
+                                &darr; Scarica per Mac
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </main>
         <!--MAIN-->
         <!--FOOTER-->
-        <div class="container-dark">
-                    
-        </div>
+            <footer>
+                <div class="container-dark">
+                    <div class="container1">
+                        <h2 class="space-h2-6">
+                            Il tuo posto per <br>
+                            parlare
+                        </h2>
+                        <section>
+                            <img class="ita-img" src="./ita.png" alt="bandiera italia">
+                            <nav class="italiano"> Italiano &#11206;</nav>
+                        </section>
+                        <div class="logo">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                        </div>
+                    </div>
+                    <div class="container2">
+                        <nav>
+                            Prodotto
+                        </nav>
+                        <nav>
+                            Scarica
+                        </nav>
+                        <nav>
+                            Perchè Discord
+                        </nav>
+                        <nav>
+                            Nitro
+                        </nav>
+                        <nav>
+                            Sicurezza
+                        </nav>
+                        <nav>
+                            Assistenza
+                        </nav>
+                    </div>
+                    <div class="container2">
+                        <nav>
+                            Compagnia
+                        </nav>
+                        <nav>
+                            Chi Siamo
+                        </nav>
+                        <nav>
+                            Lavora con noi
+                        </nav>
+                        <nav>
+                            Marchio
+                        </nav>
+                        <nav>
+                            Redazione
+                        </nav>
+                        <nav>
+                            Negozio
+                        </nav>
+                    </div>
+                    <div class="container2">
+                        <nav>
+                            Risorse
+                        </nav>
+                        <nav>
+                            Scarica
+                        </nav>
+                        <nav>
+                            Perchè Discord
+                        </nav>
+                        <nav>
+                            Nitro
+                        </nav>
+                        <nav>
+                            Sicurezza
+                        </nav>
+                        <nav>
+                            Assistenza
+                        </nav>
+                        <nav>
+                            Scarica
+                        </nav>
+                        <nav>
+                            Perchè Discord
+                        </nav>
+                        <nav>
+                            Nitro
+                        </nav>
+                        <nav>
+                            Sicurezza
+                        </nav>
+                        <nav>
+                            Assistenza
+                        </nav>
+                    </div>
+                    <div class="container2">
+                        <nav>
+                            Norme
+                        </nav>
+                        <nav>
+                            Scarica
+                        </nav>
+                        <nav>
+                            Perchè Discord
+                        </nav>
+                        <nav>
+                            Nitro
+                        </nav>
+                        <nav>
+                            Sicurezza
+                        </nav>
+                        <nav>
+                            Assistenza
+                        </nav>
+                    </div>
+                </div>
+                <div class="container-hr">
+                    <hr>
+                </div>
+                <div class="container-dark">
+                    <div class="container-footer">
+                        <div class="discord2">
+                            <img src="./logo.svg" alt="Discord">
+                        </div>
+                        <button class="registrati-button">Registrati</button>
+                    </div>
+                </div>
+            </footer>
         <!--FOOTER-->
     </body>
 </html>
