apportate modifiche ai bottoni

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <header>
                 <div class="container-header">
                     <div class="discord1">
-                        <img src="./logo.svg" alt="logo discord">
+                        <img src="./img/logo.svg" alt="logo discord">
                     </div>
 
                     <nav class="nav-button">
                         Scarica Perchè Discord Nitro Sicurezza Assistenza
                     </nav>
                     
-                    <button class="accedi">Accedi</button>
+                    <nav class="accedi">Accedi</nav>
                 </div>
             </header>
         <!--/HEADER-->
@@ -46,18 +46,18 @@
                         <p>Discord rende più facile chiaccherare ogni
                             giorno e ritrovarsi più spesso.
                         </p>
-                        <button class="scarica-mac-white">
-                            &darr; Scarica per Mac
-                        </button>
-                        <button class="apri-browser">
+                        <span class="scarica-mac-white">
+                            &darr;Scarica per Mac
+                        </span>
+                        <span class="apri-browser">
                             Apri Discord nel tuo browser
-                        </button>
+                        </span>
                     </div>
                 </div>
 
                 <div class="container-white">
                     <div class="container-img1">
-                        <img src="./item1.svg" alt="item1">
+                        <img src="./img/item1.svg" alt="item1">
                     </div>
                     <div class="container-text1">
                         <h2 class="space-h2-1">
@@ -100,12 +100,12 @@
                             </p>
                         </div>
                         <div class="container-img2">
-                            <img src="./item2.svg" alt="item2">
+                            <img src="./img/item2.svg" alt="item2">
                         </div>
                     </div>
                     <div class="container-white">
                         <div class="container-img3">
-                            <img src="./item3.svg" alt="item3">
+                            <img src="./img/item3.svg" alt="item3">
                         </div>
                         <div class="container-text3">
                             <h2 class="space-h2-3">
@@ -146,15 +146,15 @@
                             </p>
                         </div>
                         <div class="container-img4">
-                            <img src="./item4-big.svg" alt="item4">
+                            <img src="./img/item4-big.svg" alt="item4">
                         </div>
                         <div class="container-text5">
                             <h2 class="space-h2-5">
                                 Pronto a iniziare l'avventura?
                             </h2>
-                            <button class="scarica-mac-blue">
+                            <nav class="scarica-mac-blue">
                                 &darr; Scarica per Mac
-                            </button>
+                            </nav>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                             parlare
                         </h2>
                         <section>
-                            <img class="ita-img" src="./ita.png" alt="bandiera italia">
+                            <img class="ita-img" src="./img/ita.png" alt="bandiera italia">
                             <nav class="italiano"> Italiano &#11206;</nav>
                         </section>
                         <div class="logo">
@@ -281,9 +281,9 @@
                 <div class="container-dark">
                     <div class="container-footer">
                         <div class="discord2">
-                            <img src="./logo.svg" alt="Discord">
+                            <img src="./img/logo.svg" alt="Discord">
                         </div>
-                        <button class="registrati-button">Registrati</button>
+                        <nav class="registrati-button">Registrati</nav>
                     </div>
                 </div>
             </footer>
