--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
                     </div>
 
                     <nav class="nav-button">
-                        Scarica Perchè Discord Nitro Sicurezza Assistenza
+                        <ul>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perché Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                        </ul>
                     </nav>
                     
                     <nav class="accedi">Accedi</nav>
@@ -183,19 +189,19 @@
                         <nav>
                             Prodotto
                         </nav>
-                        <nav>
+                        <nav class="white">
                             Scarica
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Perchè Discord
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Nitro
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Sicurezza
-                        </nav>
-                        <nav>
+                        </nav class="white" class="white" class="white">
+                        <nav class="white" class="white" class="white">
                             Assistenza
                         </nav>
                     </div>
@@ -203,19 +209,19 @@
                         <nav>
                             Compagnia
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Chi Siamo
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Lavora con noi
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Marchio
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Redazione
                         </nav>
-                        <nav>
+                        <nav class="white" class="white" class="white">
                             Negozio
                         </nav>
                     </div>
@@ -223,34 +229,34 @@
                         <nav>
                             Risorse
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Scarica
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Perchè Discord
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Nitro
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Sicurezza
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Assistenza
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Scarica
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Perchè Discord
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Nitro
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Sicurezza
                         </nav>
-                        <nav>
+                        <nav class="white" class="white">
                             Assistenza
                         </nav>
                     </div>
@@ -258,26 +264,24 @@
                         <nav>
                             Norme
                         </nav>
-                        <nav>
+                        <nav class="white">
                             Scarica
                         </nav>
-                        <nav>
+                        <nav class="white">
                             Perchè Discord
                         </nav>
-                        <nav>
+                        <nav class="white">
                             Nitro
                         </nav>
-                        <nav>
+                        <nav class="white">
                             Sicurezza
                         </nav>
-                        <nav>
+                        <nav class="white">
                             Assistenza
                         </nav>
                     </div>
                 </div>
-                <div class="container-hr">
-                    <hr>
-                </div>
+                <hr>
                 <div class="container-dark">
                     <div class="container-footer">
                         <div class="discord2">
